# ufdbguard

./: .gitignore  CHANGELOG  COPYING  INSTALL  Makefile.in  README  configure  configure.in  opensslver.c  test.block  tt.c  ufdbGuard.spec
doc/: Makefile.in  README  install_man.sh  ufdbgclient.1  ufdbguardd.1  ufdbhttpd.1  ufdbupdate.1
samples/: Makefile  Makefile.in  URLblocked.cgi
src/: Categories  Makefile.in  UFDB  check_config_file  config.h.in  copy_user_params  crypt.c  detect  domains0.in  domains1.in  dtest.c  e1.in  genTable.c  httpsQueue.c  httpsQueue.h  httpserver.c  httpserver.h  inline.h  install_etcfiles.sh  iptst.c  ipv6.c  lex.yy.c.flex  main.c  makeinput  perftest1.c  rwtest.c  sampleufdbGuard.conf  sg.h.in  sg.l  sg.y  sgDiv.c  sgLog.c  squidGuard.conf  strcmpurlpart.static.c  tlds  u1.in  ufdb-api-private.h  ufdb.h  ufdb.h.in  ufdbAnalyse.c  (+20 more)
src/mtserver/: HTTPS  Makefile.in  SSL.sites  THREADS  emptyuserlist  https.in.1  https.in.4  https.in.500  https.in.800  https.in.small  https.in2.500  in.500  in.50000  in.50000bl  in.same  lurl  par.https.in.500  security  sigsegv.c  sysconfig.ufdbguard  sysconfig.ufdbguard.in  time.conf  ufdb-pstack.in  ufdb.sh.in  ufdbGuardEUL.conf  ufdbGuardFULL.conf  ufdbGuardV.conf  ufdbGuardV2.conf  ufdbGuardVNL.conf  ufdbgclient.c  ufdbguardd.c  valgr.sh  valgrsupp  valgrsupp-full
src/mtserver/system/: ads  aggressive  audio-video  drugs  gambling  mail  porn  proxy  school  violence  warez
test/: Makefile.in  benchmark2.conf  requests  test1.conf.in  test1.expected  test2.conf.in  test2.expected
test/blacklist/: domains  emptyuserlist  erruserlist  httpsgoogle.expressions  httpsipblock.expressions  privuserlist
test/blacklist/entertainment/: domains  domains.ufdb
test/blacklist/ipv6/: domains  domains.ufdb
test/blacklist/known/: domains  domains.ufdb
test/blacklist/proxies/: domains.ufdb  expressions  expressions.test.many
test/blacklist/security/: cacerts  domains  domains.ufdb
webmin/: ufdbguard.wbm
